2004-12-06  Fred Kiefer <FredKiefer@gmx.de>

	* Source/xlib/XGServerWindow.m  (-setwindowlevel::): Stop using
	the KDE override atom for window levels. The old behaviour may be
	reactivated via the define USE_KDE_OVERRIDE.

2004-11-28  Matt Rice <ratmice@yahoo.com>

	* Source/x11/XGGLFormat.m (-initWithAttributes:,append,append1): Add 
	missing curly brackets, fix append and append1 macros so they can safely
	be used without curly brackets.
	
2004-11-28 Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/gpbs.m: When run as daemon, re-execute with --no-fork flag
	so that we can work with threading using pth library (default on
	some BSD versions).

2004-11-10 18:41  Alexander Malmberg <alexander@malmberg.org>

	* Source/x11/XWindowBuffer.m (test_xshm): New function.
	(test_xshm_error_handler): New function.
	(+windowBufferForWindow:depthInfo:): Move XShm detection code
	to test_xshm and use it to decide whether to use XShm or not.
	(+initialize): Move use_xshm setting code to test_xshm.
	(+_gotShmCompletion:): Don't warn if we can't find an XWindowBuffer
	for the event.

2004-11-10  Matt Rice <ratmice@yahoo.com>

	* Source/x11/XGServerWindow.m (-iconSize): Implement new method.
	(-iconTileImage:): ditto.

2004-11-09 22:42  Alexander Malmberg <alexander@malmberg.org>

	* Source/x11/XGBitmapImageRep.m: Remove dead file.
	* Source/x11/GNUmakefile: Remove reference.

2004-11-09 22:15  Alexander Malmberg <alexander@malmberg.org>

	* Source/art/ftfont.m (fix_path): Don't prepend the path to absolute
	file names.
	(-initWithFontName:matrix:screenFont:): Initialize cachedGlyph.
	(-advancementForGlyph:): Handle NSNullGlyph.
	(-glyphForCharacter:): Return NSNullGlyph if there's no glyph for
	the character.

2004-11-09 19:00  Alexander Malmberg <alexander@malmberg.org>

	* Tools/gpbs.m (main): If we get a -GSStartupNotification argument,
	post the notification after initializing. Fixes bug #10876.

2004-11-04  Adrian Robert <arobert@cogsci.ucsd.edu>
